# freyja

./: BUGS  CMakeLists.txt  ChangeLog  Makefile  Makefile.old  README  ROADMAP  Style  TODO  apt.sh  autogen.sh  configure.in  lazybuild.sh  mkinstalldirs  win32.env
branches/freyja_0.9.5/freyja/: CMakeLists.txt  Makefile  Makefile.Core  freyja.sh  setup-freyja.sh
branches/freyja_0.9.5/freyja/data/: freyja-chimera.mlisp  freyja-dev.mlisp  freyja.desktop  freyja3d.lua
branches/freyja_0.9.5/freyja/debian/: changelog  control  copyright  cron.d.ex  files  freyja.substvars  init.d.ex
branches/freyja_0.9.5/freyja/doc/: FAQ
branches/freyja_0.9.5/freyja/plugins/: lineageIIextract.cpp  lineageIIextract.mlisp  pakreader.cpp  pakreader.mlisp  perlinnoise.cpp  perlinnoise.mlisp  pythonplug.cpp  reverseengineer.cpp  reverseengineer.mlisp
branches/freyja_0.9.5/freyja/src/: BezierPatch.h  Control.h  ControlPrinter.cpp  ControlPrinter.h  Cursor.cpp  Cursor.h  Freyja3dCursor.h  FreyjaControl.cpp  FreyjaControl.h  FreyjaModel.cpp  FreyjaModel.h  FreyjaOpenGL.cpp  FreyjaOpenGL.h  FreyjaRender.cpp  FreyjaRender.h  FreyjaState.cpp  FreyjaState.h  MaterialControl.cpp  MaterialControl.h  MaterialEv.cpp  MaterialEv.h  OpenGLPrinter.cpp  OpenGLPrinter.h  Plugins.cpp  RecentFiles.cpp  Texture.cpp  Texture.h  config.h  freyja3d_scenegraph.cpp  freyja3d_scenegraph.h  freyja_events.cpp  freyja_events.h  misc.cpp
branches/freyja_0.9.5/libfreyja/: CMakeLists.txt  Makefile  Makefile.Old  Makefile.Win32  UpdateBindings-Lua.py  UpdateBindings.py  autogen.sh  depend  gdb-freyjautil.sh  python.cpp  python.env  python.mak
branches/freyja_0.9.5/libfreyja/debian/: files  libfreyja.substvars  rules
branches/freyja_0.9.5/libfreyja/freyja/: Action.h  ActionManager.h  Bone.cpp  Bone.h  BoneABI.cpp  BoneABI.h  BoneTrack.h  Camera.cpp  Camera.h  CameraABI.cpp  CopyModel.cpp  Edge.h  Face.h  FreyjaCamera.cpp  FreyjaFSM.cpp  FreyjaFSM.h  FreyjaFileWriter.h  FreyjaImage.cpp  FreyjaImage.h  FreyjaLight.cpp  FreyjaMaterial.h  FreyjaMesh.cpp  FreyjaMesh.h  FreyjaPakReader.cpp  FreyjaPakReader.h  FreyjaPlugin.cpp  FreyjaPlugin.h  FreyjaPluginABI.cpp  FreyjaPluginABI.h  FreyjaTexture.cpp  FreyjaTexture.h  (+52 more)
branches/freyja_0.9.5/libhel/: CMakeLists.txt  Makefile  Makefile.Win32
branches/freyja_0.9.5/plugins/: CMakeLists.txt  Makefile  depend  freyja.env
branches/freyja_0.9.5/tinyxml/: CMakeLists.txt
libfreyja/: BUGS  CMakeLists.txt  ChangeLog  Makefile  Makefile.Core  Makefile.Linux  Makefile.Win32  TODO  UpdateBindings-CSharp.py  UpdateBindings.py  autogen.sh  depend  libfreyja.xmi  libsetup.sh
libfreyja/debian/: changelog  files  libfreyja-default.ex  libfreyja.substvars  postinst.ex  watch.ex
libfreyja/freyja/: Action.cpp  Bone.cpp  Bone.h  BoneABI.cpp  BoneABI.h  BoneTrack.h  Camera.cpp  Camera.h  CameraABI.cpp  CameraTrack.h  CopyModel.cpp  CopyModel.h  Edge.h  Egg.h  Face.h  FloatArray.cpp  FloatArray.h  FreyjaCamera.cpp  FreyjaCamera.h  FreyjaFSM.cpp  FreyjaFSM.h  FreyjaFileReader.cpp  FreyjaFileReader.h  FreyjaImage.cpp  FreyjaImage.h  FreyjaMaterial.cpp  FreyjaMaterial.h  FreyjaMesh.cpp  FreyjaMesh.h  FreyjaPakReader.cpp  FreyjaPakReader.h  FreyjaPluginABI.cpp  FreyjaPluginABI.h  FreyjaPrinter.h  FreyjaScene.cpp  FreyjaScene.h  FreyjaTexture.cpp  FreyjaTexture.h  FreyjaUtil.cpp  GenericKeyframe.h  (+78 more)
libfreyja/plugins/: image_dds.cpp  image_jpeg.cpp  image_pcx.cpp  image_png.cpp  image_ppm.cpp  image_tga.cpp  mtk_ppm.cpp
libfreyja/plugins/image/: bmp.cpp  dds.cpp  pcx.cpp  pcx.h  tga.cpp  tga.h
libfreyja/plugins/model/: 3ds.cpp  Ase.cpp  BSAPakReader.cpp  ETModel.cpp  Egg.h  GLMModel.cpp  GLMModel.cpp~  GLMModel.h~  GRNModel.h  HalfLife.cpp  Lwo.cpp  Md2.cpp  Md3.cpp  Md3.h  Md3AnimModel.cpp  Md5.cpp  Mdl.cpp  Nif3.cpp  Nif3.h  Nif4.cpp  Nif4.h  Nod.cpp  Nod.h  PSKModel.cpp  PSKModel.h  SDLUnitTest.cpp  Sims.cpp  Skel.cpp  URTexture.cpp  URTexture.h  UTPackage.cpp  UTPakBrowser.h  eggv7.cpp  freyja_grn.cpp  freyja_milkshape.cpp  freyja_trmesh.cpp  freyja_user1.cpp  milkshape.cpp  nwnascii.cpp  obj.cpp  (+3 more)
libfreyja/scripts/: lua_api.py  python_api.py
libfreyja/src/: Action.cpp  Action.h  ActionManager.cpp  Animation.h  Bone.cpp  Bone.h  BoneABI.h  CopyModel.cpp  CopyModel.h  Egg.cpp  Egg.h  Egg9.h  EggFileReader.cpp  EggFileReader.h  EggFileWriter.h  EggImage.cpp  EggImage.h  EggPlugin.cpp  EggPlugin.h  FileWriter.h  Freyja.h  FreyjaFSM.cpp  FreyjaFSM.h  FreyjaFileReader.cpp  FreyjaFileReader.h  FreyjaFileWriter.cpp  FreyjaFileWriter.h  FreyjaImage.cpp  FreyjaMaterial.cpp  FreyjaMaterial.h  FreyjaMesh.cpp  FreyjaMesh.h  FreyjaPakReader.cpp  FreyjaPakReader.h  FreyjaPlugin.cpp  FreyjaPlugin.h  FreyjaPluginABI.cpp  FreyjaPluginABI.h  FreyjaPrinter.h  FreyjaScene.cpp  (+38 more)
libfreyja/tools/: Freyja.cpp  Freyja.h  SkeletalMesh  cull.cpp  extractFace.cpp  extractWedge.cpp  freyjautil.cpp  lineageIIraw2obj.cpp
libmgtk/: CMakeLists.txt  ChangeLog  Makefile  Makefile.Core  Makefile.Win32  TODO  depend  freyja3d.lua  test.mlisp
libmgtk/debian/: changelog  cron.d.ex  files  init.d.ex  libmgtk.doc-base.EX  libmgtk.substvars  manpage.1.ex  postinst.ex  postrm.ex  prerm.ex  rules  watch.ex
libmgtk/mgtk/: ConfirmationDialog.cpp  ConfirmationDialog.h  MGtkLua.h  MLisp.cpp  MLisp.h  MLispGtk.cpp  MLispWX.cpp  QueryDialog.cpp  QueryDialog.h  Resource.cpp  Resource.h  ResourceEvent.cpp  ResourceEvent.h  ResourceEventDelegate.h  mgtk.cpp  mgtk_callbacks.cpp  mgtk_callbacks.h  mgtk_events.h  mgtk_filedialog.cpp  mgtk_filedialog.h  mgtk_interface.cpp  mgtk_interface.h  mgtk_keys.h  mgtk_linker.cpp  mgtk_linker.h  mgtk_lua.cpp  mgtk_lua.h  mgtk_opengl_canvas.h  mgtk_rangeslider.cpp  mgtk_resource.cpp  mgtk_resource.h  mgtk_timeslider.cpp  mgtk_timeslider.h  mgtk_tree.cpp  mgtk_tree.h
libmgtk/src/: MLisp.cpp  MLispWX.cpp  Mlisp.cpp  Mlisp.h  Resource.cpp  Resource.h  mgtk_callbacks.cpp  mgtk_callbacks.h  mgtk_events.h  mgtk_interface.cpp  mgtk_resource.cpp
lua/: CMakeLists.txt  Makefile.Win32
lua/debian/: changelog  rules
lua/lua/: Lua.h
tinyxml/: CMakeLists.txt  Makefile.Core
tinyxml/debian/: control  files
(+1671 files in other folders)
